--- a/DeviceSettings/AndroidManifest.xml
+++ b/DeviceSettings/AndroidManifest.xml
@@ -126,7 +126,7 @@
 
         <service
             android:name=".FPSTileService"
-            android:icon="@drawable/ic_fps"
+            android:icon="@drawable/ic_launcher"
             android:label="@string/fps_info_title"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
