--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -1,6 +1,42 @@
 # This file allows user to override the factory
 # defaults for the WLAN Driver
 
+# ifdef VENDOR_EDIT
+gDualMacFeatureDisable=1
+gInitialScanNoDFSChnl=1
+#gInitialDwellTime=20
+gSoftApMaxPeers=8
+gRoamBmissFirstBcnt=15
+gRoamBmissFinalBcnt=25
+gDroppedPktDisconnectTh=1024
+# Runtime is default zero in hostdriver
+gRuntimePM=0
+gRAFilterEnable=0
+gMCAddrListEnable=1
+# 0: disable feature (default)
+# 1: drop all broadcast frames, except ARP
+# 2: drop all multicast frames, except ICMPv6
+# 3: drop all broadcast and multicast frames, except ARP and ICMPv6
+gHwFilterMode=3
+gBpfFilterEnable=1
+#gFwDebugLogLevel=3
+#gFwDebugModuleLoglevel=2,1,3,1,5,1,9,1,13,1,14,1,18,1,19,1,26,1,28,1,29,1,31,1,36,1,38,1,46,1,47,1,50,1,52,1,53,1,56,1,60,1,61,1
+gChannelBondingMode24GHz=1
+gForce1x1Exception=0
+gStaKeepAlivePeriod=30
+gper_roam_enabled=3
+gper_roam_th_percent=80
+gper_min_rssi_threshold_for_roam=70
+gItoRepeatCount=5
+gDisablePacketFilter=0
+g_enable_packet_filter_bitmap=3
+LROEnable=0
+gEnableModulatedDTIM=3
+gMaxLIModulatedDTIM=6
+#gActiveModeOffload=0
+gActionOUISwitchTo11nMode="FFFFFF 03 FFFFBF 20 21 40"
+gReportMaxLinkSpeed=2
+# endif /* VENDOR_EDIT */
 # Enable IMPS or not
 gEnableImps=1
 
@@ -68,13 +104,21 @@ gDisableIntraBssFwd=0
 WmmIsEnabled=0
 
 # 802.11d support
-g11dSupportEnabled=0
+#ifdef VENDOR_EDIT
+g11dSupportEnabled=1
+#else
+#g11dSupportEnabled=0
+#endif VENDOR_EDIT
 
 # 802.11h support
 g11hSupportEnabled=1
 
 # DFS Master Capability
-gEnableDFSMasterCap=1
+#ifdef VENDOR_EDIT
+gEnableDFSMasterCap=0
+#else
+#gEnableDFSMasterCap=1
+#endif VENDOR_EDIT
 
 # ESE Support and fast transition
 EseEnabled=0
@@ -82,7 +126,9 @@ EseEnabled=0
 ImplicitQosIsEnabled=0
 
 gNeighborScanTimerPeriod=200
-gNeighborLookupThreshold=76
+# endif VENDOR_EDIT
+
+gNeighborLookupThreshold=85
 gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
 gMaxNeighborReqTries=3
@@ -101,6 +147,9 @@ RoamRssiDiff=5
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
 gRoamIntraBand=0
+
+# RSSI threshold offset for 2G to 5G roam
+roam_bad_rssi_thresh_offset_2g=0
 
 #Short Guard Interval Enable/disable
 gShortGI20Mhz=1
@@ -173,8 +222,13 @@ gSetRxChainmask1x1=1
 # Scan Timing Parameters
 # gPassiveMaxChannelTime=110
 # gPassiveMinChannelTime=60
-gActiveMaxChannelTime=40
-gActiveMinChannelTime=20
+#ifdef VENDOR_EDIT
+gActiveMaxChannelTime=60
+gActiveMinChannelTime=40
+#else
+#gActiveMaxChannelTime=40
+#gActiveMinChannelTime=20
+#endif VENDOR_EDIT
 
 #If set to 0, MCC is not allowed.
 gEnableMCCMode=1
@@ -220,7 +274,11 @@ gMaxMediumTime = 6000
 gRrmEnable=1
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=2
+#ifdef VENDOR_EDIT
+gEnablePowerSaveOffload=1
+#else
+#gEnablePowerSaveOffload=2
+#endif VENDOR_EDIT
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -237,6 +295,9 @@ gVhtAmpduLenExponent=7
 # Maximum MPDU length (VHT only. Valid values:
 # 0->3895 octets, 1->7991 octets, 2->11454 octets)
 gVhtMpduLen=2
+
+# Report actual link speed (not max or scaled)
+gReportMaxLinkSpeed=0
 
 # Maximum number of wow filters required
 #gMaxWoWFilters=22
@@ -255,6 +316,10 @@ gEnableMCCAdaptiveScheduler=1
 
 #Enable or Disable p2p device address administered
 isP2pDeviceAddrAdministrated=0
+
+# Set Thermal Power limit
+TxPower2g=10
+TxPower5g=10
 
 # Remove Overlap channel restriction
 gEnableOverLapCh=0
@@ -304,7 +369,14 @@ gEnableLpassSupport=1
 gCountryCodePriority=1
 
 # Enable(1)/Disable(0) SIFS burst
-gEnableSifsBurst=1
+#ifdef VENDOR_EDIT
+#Min: 0  disabled
+#Max: 3  enabled802.11g
+#Default: 1 enabled, but disabled for legacy mode
+gEnableSifsBurst=3
+#else
+# gEnableSifsBurst=1
+# endif /* VENDOR_EDIT */
 
 # Enable or Disable Multi-user MIMO
 # 1=Enable (default), 0=Disable
@@ -317,6 +389,19 @@ gSapSccChanAvoidance=0
 
 # Inactivity time (in ms) to end TX Service Period while in IBSS power save mode
 gIbssTxSpEndInactivityTime=10
+
+# Enable support for TDLS
+#  0 - disable
+#  1 - enable
+gEnableTDLSSupport=1
+
+# Enable support for Implicit Trigger of TDLS. That is, wlan driver shall
+# initiate TDLS Discovery towards a peer whenever setup criteria (throughput
+# and RSSI) is met and then will initiate teardown when teardown criteria
+# (idle packet count and RSSI) is met.
+#  0 - disable
+#  1 - enable
+gEnableTDLSImplicitTrigger=1
 
 # Enable TDLS External Control. That is, user space application has to
 # first configure a peer MAC in wlan driver towards which TDLS is desired.
@@ -339,7 +424,11 @@ gEnableTDLSOffChannel=1
 
 # Enable or Disable Random MAC (Spoofing)
 # 1=Enable (default), 0=Disable
+#ifdef VENDOR_EDIT
 gEnableMacAddrSpoof=1
+#else
+#gEnableMacAddrSpoof=0
+#endif VENDOR_EDIT
 
 ################ Datapath feature set Begin ################
 # Bus bandwidth threshold values in terms of number of packets
@@ -423,12 +512,12 @@ maxMSDUsPerRxInd=8
 
 # Enable NUD tracking feature
 # 1 - enable 0 - disable(default)
-gEnableNUDTracking=1
-
-# Enable PEER UNMAP CONF SUPPORT
-# 1 - enable 0 - disable(default)
-gEnablePeerUnmapConfSupport=1
-
+#ifdef VENDOR_EDIT
+# eleven.xie@Connectivity, 2019/05/15, [Q porting] align the vowifi behavior with 18811.
+#gEnableNUDTracking=1
+#else
+gEnableNUDTracking=0
+#endif VENDOR_EDIT
 ################ Datapath feature set End ################
 
 ################ NAN feature set start ###################
@@ -441,7 +530,11 @@ genable_nan_datapath=1
 
 ################ NAN feature set end #####################
 
-adaptive_dwell_mode_enabled=1
+#ifdef VENDOR_EDIT
+adaptive_dwell_mode_enabled=0
+#else
+#adaptive_dwell_mode_enabled=1
+#endif /* VENDOR_EDIT */
 
 hostscan_adaptive_dwell_mode=1
 
@@ -457,10 +550,53 @@ enable_rtt_mac_randomization=1
 #Enable/Disable SNR monitoring
 gEnableSNRMonitoring=1
 
+# Enable/Disable DTIM Synth
+# 1- Enable DTIM Synth
+# 0- Disable DTIM Synth
+gEnableLPRx=0
+
+#Action OUIs for 1x1 connection
+#Please do not remove the default values, append new OUIs in the end
+#Default=000C43 00 25 42 001018 06 02FFF02C0000 BC 25 42 001018 06 02FF040C0000 BC 25 42 00037F 00 35 6C
+#ifdef VENDOR_EDIT
+# Sync http://pgerrit.oneplus.cn:8080/#/c/200897/ for EID-4159 and http://pgerrit.oneplus.cn:8080/#/c/229408/ for ISTRACKING-19649
+#gActionOUIConnect1x1=000C43 00 25 42 001018 06 02FFF02C0000 BC 25 42 001018 06 02FF040C0000 BC 25 42 001018 06 02FF001C0000 BC 25 48 001018 06 0200000C0000 BC 25 42
+#endif /* VENDOR_EDIT */
+
+#Action OUIs for ITO extension
+#Please do not remove the default values, append new OUIs in the end
+#Default=00037F 06 01010000FF7F FC 01 000AEB 02 0100 C0 01 000B86 03 010408 E0 01
+#gActionOUIITOExtension=00037F 06 01010000FF7F FC 01 000AEB 02 0100 C0 01 000B86 03 010408 E0 01
+
+# Add another interface while driver load
+gEnableConcurrentSTA=wlan1
+
+#ifdef VENDOR_EDIT
+global_adapt_dwelltime_mode=1
+roamscan_adaptive_dwell_mode=1
+extscan_adaptive_dwell_mode=1
+pnoscan_adaptive_dwell_mode=1
+active_max_channel_time_2g=60
+
+gcmp_enabled=0
+sae_enabled=0
+gEnablePacketLog=1
+#endif /* VENDOR_EDIT */
+
+# etsi13_srd_chan_in_master_mode - Enable/disable ETSI SRD channels in
+# master mode PCL and ACS functionality
+# @Min: 0
+# @Max: 1
+# @Default: 0
+etsi13_srd_chan_in_master_mode=1
+
 # TheCrazyLex@PA Prefer connecting to 5Ghz AP
-# even if its RSSI is lower by 5dBm than the 2.4Ghz AP.
+# even if its RSSI is lower by 3dBm than the 2.4Ghz AP
 gRoamPrefer5GHz=1
-gSelect5GHzMargin=5
+gSelect5GHzMargin=3
+
+# Disable rx wakelock
+rx_wakelock_timeout=0
 
 # Set IPA low/med/high bandwidth mbps
 gIPALowBandwidthMbps=100
@@ -479,11 +615,6 @@ EseEnabled=1
 # Use wake lock during user scan
 wake_lock_in_user_scan=1
 
-# Enable/Disable force bandwidth voting during IPA suspend
-gIPAForceVotingEnable=1
-spectral_disable=1
-
 END
 
 # Note: Configuration parser would not read anything past the END marker
-
